# printai_application

./: README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py  scrape_books.py  scrape_hn.py
backend/app/tests/: __init__.py  test_main.py
frontend/: Dockerfile  package-lock.json  package.json  pubspec.yaml
frontend/lib/: agent_page.dart  main.dart
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: App.js  App.test.js  n8n-chat.vue
workflow/: Dockerfile  credentials.json  entrypoint.sh  n8n_workflow.json
