[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend service for the application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.0"
uvicorn = "0.22.0"
redis = "4.5.5"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
selenium = "4.10.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"
httpx = "0.24.1"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
